[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ismatec"
version = "0.5.0"
description="Python driver for Ismatec Reglo ICC peristaltic pumps."
authors = [
  {name = "Alex Ruddick", email = "alex@ruddick.tech" },
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dependencies = [
    "pyserial",
]
[project.optional-dependencies]
test = [
  "mypy==1.11.*",
  "pytest>=8,<9",
  "pytest-cov",
  "pytest-asyncio==0.24.0",
  "pytest-xdist>=3,<4",
  "ruff==0.6.*",
  "types-pyserial",
]

[project.scripts]
ismatec = "ismatec:command_line"

[project.urls]
Homepage = "https://github.com/alexrudd2/ismatec"
Issues = "https://github.com/alexrudd2/ismatec/issues"

[tool.setuptools]
packages = ["ismatec"]

[tool.setuptools.package-data]
"ismatec" = ["py.typed"]

[tool.ruff]
extend-exclude = ["venv*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "D104",     # Missing docstring in public package
  "D107",     # Missing docstring in __init__
  "SIM300"    # Yoda condition
]
select = [
    "B",   # bandit
    "C",   # complexity
    "D",   # docstrings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest
    "RUF", # ruff base config
    "SIM", # flake-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    # "ARG", # flake8-unused args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=ismatec"
asyncio_mode = "auto"
